src/main/java/org/schluter/compiler/gen/CC_2021_2Parser.java
package org.schluter.compiler.gen;// Generated from /Users/x266483/Documents/projects/lexicalAnalyzer/compiler/src/main/antlr4/CC_2021_2.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CC_2021_2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEF=1, INT=2, FLOAT=3, STRING=4, BREAK=5, PRINT=6, READ=7, RETURN=8, IF=9, 
		ELSE=10, FOR=11, NEW=12, NULL=13, OPEN_PAR=14, CLOSE_PAR=15, OPEN_CHAVE=16, 
		CLOSE_CHAVE=17, SEMI_COLON=18, OPEN_COL=19, CLOSE_COL=20, ASSIGN=21, COLON=22, 
		LESS=23, GREATER=24, LESS_EQUAL=25, GREATER_EQUAL=26, EQUAL=27, DIFFERENT=28, 
		PLUS=29, SUBTR=30, MULT=31, DIV=32, REMINDER=33, Identifier=34, IntegerConstant=35, 
		FloatConstant=36, WhiteSpace=37, StringConstant=38, Invalid=39;
	public static final int
		RULE_program = 0, RULE_funcList = 1, RULE_funcDef = 2, RULE_paramList = 3, 
		RULE_statement = 4, RULE_varDecl = 5, RULE_atribStat = 6, RULE_funcCall = 7, 
		RULE_paramListCall = 8, RULE_printStat = 9, RULE_readStat = 10, RULE_returnStat = 11, 
		RULE_ifStat = 12, RULE_forState = 13, RULE_stateList = 14, RULE_allocExpression = 15, 
		RULE_expression = 16, RULE_numExpression = 17, RULE_term = 18, RULE_unaryExpression = 19, 
		RULE_factor = 20, RULE_lValue = 21, RULE_type = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "funcList", "funcDef", "paramList", "statement", "varDecl", 
			"atribStat", "funcCall", "paramListCall", "printStat", "readStat", "returnStat", 
			"ifStat", "forState", "stateList", "allocExpression", "expression", "numExpression", 
			"term", "unaryExpression", "factor", "lValue", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'int'", "'float'", "'string'", "'break'", "'print'", 
			"'read'", "'return'", "'if'", "'else'", "'for'", "'new'", "'null'", "'('", 
			"')'", "'{'", "'}'", "';'", "'['", "']'", "'='", "','", "'<'", "'>'", 
			"'<='", "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEF", "INT", "FLOAT", "STRING", "BREAK", "PRINT", "READ", "RETURN", 
			"IF", "ELSE", "FOR", "NEW", "NULL", "OPEN_PAR", "CLOSE_PAR", "OPEN_CHAVE", 
			"CLOSE_CHAVE", "SEMI_COLON", "OPEN_COL", "CLOSE_COL", "ASSIGN", "COLON", 
			"LESS", "GREATER", "LESS_EQUAL", "GREATER_EQUAL", "EQUAL", "DIFFERENT", 
			"PLUS", "SUBTR", "MULT", "DIV", "REMINDER", "Identifier", "IntegerConstant", 
			"FloatConstant", "WhiteSpace", "StringConstant", "Invalid"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CC_2021_2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CC_2021_2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public FuncListContext funcList() {
			return getRuleContext(FuncListContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CC_2021_2Visitor ) return ((CC_2021_2Visitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
			case STRING:
			case BREAK:
			case PRINT:
			case READ:
			case RETURN:
			case IF:
			case FOR:
			case OPEN_CHAVE:
			case SEMI_COLON:
			case Identifier:
				{
				setState(46);
				statement();
				}
				break;
			case DEF:
				{
				setState(47);
				funcList();
				}
				break;
			case EOF:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncListContext extends ParserRuleContext {
		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class,0);
		}
		public FuncListContext funcList() {
			return getRuleContext(FuncListContext.class,0);
		}
		public FuncListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).enterFuncList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).exitFuncList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CC_2021_2Visitor ) return ((CC_2021_2Visitor<? extends T>)visitor).visitFuncList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncListContext funcList() throws RecognitionException {
		FuncListContext _localctx = new FuncListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funcList);
		try {
			setState(54);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				funcDef();
				setState(51);
				funcList();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				funcDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDefContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(CC_2021_2Parser.DEF, 0); }
		public TerminalNode Identifier() { return getToken(CC_2021_2Parser.Identifier, 0); }
		public TerminalNode OPEN_PAR() { return getToken(CC_2021_2Parser.OPEN_PAR, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TerminalNode CLOSE_PAR() { return getToken(CC_2021_2Parser.CLOSE_PAR, 0); }
		public TerminalNode OPEN_CHAVE() { return getToken(CC_2021_2Parser.OPEN_CHAVE, 0); }
		public StateListContext stateList() {
			return getRuleContext(StateListContext.class,0);
		}
		public TerminalNode CLOSE_CHAVE() { return getToken(CC_2021_2Parser.CLOSE_CHAVE, 0); }
		public FuncDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).enterFuncDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).exitFuncDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CC_2021_2Visitor ) return ((CC_2021_2Visitor<? extends T>)visitor).visitFuncDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDefContext funcDef() throws RecognitionException {
		FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(DEF);
			setState(57);
			match(Identifier);
			setState(58);
			match(OPEN_PAR);
			setState(59);
			paramList();
			setState(60);
			match(CLOSE_PAR);
			setState(61);
			match(OPEN_CHAVE);
			setState(62);
			stateList();
			setState(63);
			match(CLOSE_CHAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamListContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(CC_2021_2Parser.Identifier, 0); }
		public TerminalNode COLON() { return getToken(CC_2021_2Parser.COLON, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).enterParamList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).exitParamList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CC_2021_2Visitor ) return ((CC_2021_2Visitor<? extends T>)visitor).visitParamList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_paramList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				{
				setState(65);
				type();
				setState(66);
				match(Identifier);
				setState(67);
				match(COLON);
				setState(68);
				paramList();
				}
				}
				break;
			case 2:
				{
				{
				setState(70);
				type();
				setState(71);
				match(Identifier);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode SEMI_COLON() { return getToken(CC_2021_2Parser.SEMI_COLON, 0); }
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public AtribStatContext atribStat() {
			return getRuleContext(AtribStatContext.class,0);
		}
		public PrintStatContext printStat() {
			return getRuleContext(PrintStatContext.class,0);
		}
		public ReadStatContext readStat() {
			return getRuleContext(ReadStatContext.class,0);
		}
		public ReturnStatContext returnStat() {
			return getRuleContext(ReturnStatContext.class,0);
		}
		public IfStatContext ifStat() {
			return getRuleContext(IfStatContext.class,0);
		}
		public ForStateContext forState() {
			return getRuleContext(ForStateContext.class,0);
		}
		public TerminalNode OPEN_CHAVE() { return getToken(CC_2021_2Parser.OPEN_CHAVE, 0); }
		public StateListContext stateList() {
			return getRuleContext(StateListContext.class,0);
		}
		public TerminalNode CLOSE_CHAVE() { return getToken(CC_2021_2Parser.CLOSE_CHAVE, 0); }
		public TerminalNode BREAK() { return getToken(CC_2021_2Parser.BREAK, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CC_2021_2Visitor ) return ((CC_2021_2Visitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
			case STRING:
				{
				{
				setState(75);
				varDecl();
				setState(76);
				match(SEMI_COLON);
				}
				}
				break;
			case Identifier:
				{
				{
				setState(78);
				atribStat();
				setState(79);
				match(SEMI_COLON);
				}
				}
				break;
			case PRINT:
				{
				{
				setState(81);
				printStat();
				setState(82);
				match(SEMI_COLON);
				}
				}
				break;
			case READ:
				{
				{
				setState(84);
				readStat();
				setState(85);
				match(SEMI_COLON);
				}
				}
				break;
			case RETURN:
				{
				{
				setState(87);
				returnStat();
				setState(88);
				match(SEMI_COLON);
				}
				}
				break;
			case IF:
				{
				{
				setState(90);
				ifStat();
				setState(91);
				match(SEMI_COLON);
				}
				}
				break;
			case FOR:
				{
				{
				setState(93);
				forState();
				setState(94);
				match(SEMI_COLON);
				}
				}
				break;
			case OPEN_CHAVE:
				{
				{
				setState(96);
				match(OPEN_CHAVE);
				setState(97);
				stateList();
				setState(98);
				match(CLOSE_CHAVE);
				}
				}
				break;
			case BREAK:
				{
				{
				setState(100);
				match(BREAK);
				setState(101);
				match(SEMI_COLON);
				}
				}
				break;
			case SEMI_COLON:
				{
				setState(102);
				match(SEMI_COLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(CC_2021_2Parser.Identifier, 0); }
		public List<TerminalNode> OPEN_COL() { return getTokens(CC_2021_2Parser.OPEN_COL); }
		public TerminalNode OPEN_COL(int i) {
			return getToken(CC_2021_2Parser.OPEN_COL, i);
		}
		public List<TerminalNode> IntegerConstant() { return getTokens(CC_2021_2Parser.IntegerConstant); }
		public TerminalNode IntegerConstant(int i) {
			return getToken(CC_2021_2Parser.IntegerConstant, i);
		}
		public List<TerminalNode> CLOSE_COL() { return getTokens(CC_2021_2Parser.CLOSE_COL); }
		public TerminalNode CLOSE_COL(int i) {
			return getToken(CC_2021_2Parser.CLOSE_COL, i);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).exitVarDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CC_2021_2Visitor ) return ((CC_2021_2Visitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			type();
			setState(106);
			match(Identifier);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OPEN_COL) {
				{
				{
				setState(107);
				match(OPEN_COL);
				setState(108);
				match(IntegerConstant);
				setState(109);
				match(CLOSE_COL);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtribStatContext extends ParserRuleContext {
		public LValueContext lValue() {
			return getRuleContext(LValueContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(CC_2021_2Parser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AllocExpressionContext allocExpression() {
			return getRuleContext(AllocExpressionContext.class,0);
		}
		public FuncCallContext funcCall() {
			return getRuleContext(FuncCallContext.class,0);
		}
		public AtribStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).enterAtribStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).exitAtribStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CC_2021_2Visitor ) return ((CC_2021_2Visitor<? extends T>)visitor).visitAtribStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtribStatContext atribStat() throws RecognitionException {
		AtribStatContext _localctx = new AtribStatContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_atribStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			lValue();
			setState(116);
			match(ASSIGN);
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(117);
				expression();
				}
				break;
			case 2:
				{
				setState(118);
				allocExpression();
				}
				break;
			case 3:
				{
				setState(119);
				funcCall();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncCallContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(CC_2021_2Parser.Identifier, 0); }
		public TerminalNode OPEN_PAR() { return getToken(CC_2021_2Parser.OPEN_PAR, 0); }
		public ParamListCallContext paramListCall() {
			return getRuleContext(ParamListCallContext.class,0);
		}
		public TerminalNode CLOSE_PAR() { return getToken(CC_2021_2Parser.CLOSE_PAR, 0); }
		public FuncCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).enterFuncCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).exitFuncCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CC_2021_2Visitor ) return ((CC_2021_2Visitor<? extends T>)visitor).visitFuncCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncCallContext funcCall() throws RecognitionException {
		FuncCallContext _localctx = new FuncCallContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(Identifier);
			setState(123);
			match(OPEN_PAR);
			setState(124);
			paramListCall();
			setState(125);
			match(CLOSE_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamListCallContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(CC_2021_2Parser.Identifier, 0); }
		public TerminalNode COLON() { return getToken(CC_2021_2Parser.COLON, 0); }
		public ParamListCallContext paramListCall() {
			return getRuleContext(ParamListCallContext.class,0);
		}
		public ParamListCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramListCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).enterParamListCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).exitParamListCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CC_2021_2Visitor ) return ((CC_2021_2Visitor<? extends T>)visitor).visitParamListCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamListCallContext paramListCall() throws RecognitionException {
		ParamListCallContext _localctx = new ParamListCallContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_paramListCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(127);
				match(Identifier);
				setState(128);
				match(COLON);
				setState(129);
				paramListCall();
				}
				break;
			case 2:
				{
				setState(130);
				match(Identifier);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintStatContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(CC_2021_2Parser.PRINT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).enterPrintStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).exitPrintStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CC_2021_2Visitor ) return ((CC_2021_2Visitor<? extends T>)visitor).visitPrintStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintStatContext printStat() throws RecognitionException {
		PrintStatContext _localctx = new PrintStatContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_printStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(PRINT);
			setState(134);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadStatContext extends ParserRuleContext {
		public TerminalNode READ() { return getToken(CC_2021_2Parser.READ, 0); }
		public LValueContext lValue() {
			return getRuleContext(LValueContext.class,0);
		}
		public ReadStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).enterReadStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CC_2021_2Listener ) ((CC_2021_2Listener)listener).exitReadStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CC_2021_2Visitor ) return ((CC_2021_2Visitor<? extends T>)visitor).visitReadStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadStatContext readStat() throws RecognitionException {
		ReadStatContext _localctx = new ReadStatContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_readStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(READ);
			setState(137);
			lValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
